--- a/道理.md
+++ b/道理.md
@@ -233,7 +233,21 @@
 
 ### 活在未来，而不是当下
 
-1.你对未来有个预测；2.那个预测需要时间才能得到结果；3你笃信你的预测是正确的；4.于是你提前按照那个预测的结果行动，选择，思考；5.你终将走到那个结果出现的时刻；6.最终你的预测是正确的；7.那么，由于你提前按未来正确的结果行动、选择、思考，于是，在相当长一段时间里，你的生活中的一部分，就是“活在未来”的。（来自新东方某老师）巴菲特因为对股票、公司有了很深地研究，他有足够的信心判断只有时间足够长，价格终将回到公司的实际价值，所以他才能靠投资成为首富级别的人物。所以说巴菲特是一个活在未来的人。PS：其实我也是这样的人，哈哈。。。
+1. 你对未来有个预测；
+
+2. 那个预测需要时间才能得到结果；
+
+3. 你笃信你的预测是正确的；
+
+4. 于是你提前按照那个预测的结果行动，选择，思考；
+
+5. 你终将走到那个结果出现的时刻；
+
+6. 最终你的预测是正确的；
+
+7. 那么，由于你提前按未来正确的结果行动、选择、思考，于是，在相当长一段时间里，你的生活中的一部分，就是“活在未来”的。（来自新东方某老师）巴菲特因为对股票、公司有了很深地研究，他有足够的信心判断只有时间足够长，价格终将回到公司的实际价值，所以他才能靠投资成为首富级别的人物。所以说巴菲特是一个活在未来的人。
+
+   PS：其实我也是这样的人，哈哈。。。
 
 ### 晚上的时候，人的大脑的前额皮层对情绪的控制能力会减弱
 
@@ -332,14 +346,15 @@
 以前我总以为时间还很长，自己还很年轻，直到有一天我了解了这个东西。
 死亡方格：以平均寿命75年计算，人生只有900个月。把这900个月以格子的形式画在纸上，对应900个格子。
 如果你今年20岁，那么已经走完的人生是这样的。
-![8ced21ad24d7bec6e207e3e202c4460d.jpeg](evernotecid://026C7FBF-638F-413A-B3D6-ABF9D64D331B/appyinxiangcom/57439/ENResource/p20098)
+![time01](assets/time01.jpg)
 如果你今年50岁，那么已经走完的人生是这样的。
-![87e754985575f96487decb87b93621cf.jpeg](evernotecid://026C7FBF-638F-413A-B3D6-ABF9D64D331B/appyinxiangcom/57439/ENResource/p20099)
+![time02](assets/time02.jpg)
 其实死亡一天天地都在接近我们，只是我们在大学的时候忙于打游戏、K歌，上班的时候忙于加班，中年的时候忙于带孩子。可是什么时候有时间做自己真正想做的事情呢？做那些让你激动不已的事情？当你60岁格子快涂满的时候，你会不会后悔要是自己在20岁时多努力一点，在25岁的时候多去看一看这个世界？**所以说趁年轻多去做一做你梦想的事情吧，因为每一天，每一个月你都在划去这900个方格里的一格啊！**
 
 ### 为你自己打工，对自己的成长负责
 
 很多人这样想：我们付出自己的工作时间，老板付我们报酬，那么老板付我多少钱，我就干多少钱的活，拿6000块我就干6000块的活，要是我在工作之余打打游戏，只干了5000块的活我就赚了！然而这样想完全是错误的，给老板打工，我们会总觉得老板在剥削自己，自己是那个“受害者”。不可否认，总会有不太公平的老板，不会按照你做的贡献、你的工作水平给你相应的薪资。**可是你始终是为自己打工**啊，你工作里面获得的成长，积累的项目经验，做出的业绩等等完全是自己的，别人都抢不走。
+
 如果你因为公司环境不好，老板不公平的环境而放弃好好工作，那就太傻了。环境不好，那我好好干积累项目经验跳槽就是。假如因为老板不公平，你作为一个程序员，选择每天上班就是网上随便找个代码复制再随便修改了事，你又得到了什么呢？除了那基本薪水外你什么都没有得到，技术没有得到提升，还浪费了最宝贵的光阴，如果再过两年还这样，估计要被老板开除了…… **记住你永远都在为一家叫做“自己”的无限责任公司打工。**
 
 ### 给别人鼓励或者给别人点赞
@@ -380,7 +395,105 @@
 31. 当一个人
 
 - 当一个人去追求生活的必需品的时候，他往往是勤奋和勇敢的。
-
 - 当一个人去追求生活的消费品的时候，这个时候往往变得懒惰和温和。
-
 - 当一个人去追求生活的奢侈品的时候，这个人就变得软弱了。
+
+1. 玩命读书
+2. 玩命工作
+3. 强身健体
+
+发现问题的能力比解决问题更重要，勇于寻找问题比坐以待毙强太多了。
+
+时间是财富，是我们改命的机会。
+
+我怎样才能付得起？
+
+“真正能让你走远的，都是自律、积极和勤奋。”——卢思
+
+种一棵树最好的时间是十年前，其次是现在。
+
+心在哪里，时间就在哪里。
+
+我必须富有，因为我有孩子。
+
+“贫穷和破产的区别是：破产是暂时的，而贫穷是永久的。”
+
+只有知识才能解决问题并创造财富，那些不是靠财务知识挣来的钱也不会长久。
+
+从长远来看，重要的不是你挣了多少钱，而是你能留下多少钱，以及能够留住多久。
+
+资产就是能把钱放进你口袋里的东西。
+
+负债是把钱从你口袋里取走的东西。
+
+财富就是支撑一个人生存多长时间的能力，或者说，如果我今天停止工作，我还能活多久？
+
+富人买入资产。 穷人只有支出。
+
+从事你所学的专业的可怕后果在于，它会让你忘记关注自己的事业。人们耗尽一生去关注别人的事业并使他人致富。
+
+只有你把额外的收入用来购买可产生收入的资产，你才能获得真正的财务安全。
+
+我们都拥有巨大的潜能——这是上天赏赐的礼物。然而，我们都或多或少地存在着某种自我怀疑的心理，从而阻碍前进的步伐。这种障碍很少是缺乏某种技术性的东西，更多的是缺乏自信。有些人更容易受到外界的影响。
+
+穷人有一些不好的习惯，其中一个普遍的坏习惯就是随便动用储蓄。富人知道储蓄只能用于创造更多的收入，而不是用来支付账单。
+
+“真正能让你走远的，都是自律、积极和勤奋。”——卢思浩
+
+ 种一棵树最好的时间是十年前，其次是现在。
+
+心在哪里，时间就在哪里。
+
+你要做的，不是刷新公司的下限，而是突破你自己的上限。
+
+不要提前去消费
+
+资产就是把钱放入口袋的东西，负债就是把钱拿出口袋的东西。
+
+吃喝玩乐
+
+亲，我们负责的是简单平面设计哦，不满意可以在一个版面上进行修改，对排版期望期较高，希望是创意设计的，或是试一试心情的心态，请慎重考虑下单，以免耽误您的宝贵时间。
+
+奖励确实能激励孩子做事，但也会使孩子的行动依赖于奖励，一旦奖励停止，行动也会停止。即使孩子本身对这件事情很感兴趣也不行。
+
+凡是大众赞同的，我们就要去思考；
+凡是大众反对的，我们就要去研究；
+凡是大众厌恶的，我们就要去搞懂。
+
+卖什么，不要卖什么。
+
+树立自己的核心竞争力
+
+永辉、新华都、麦当劳、肯德基
+
+大家好，新人报道，请多多关照！
+
+马云曾经说过员工离职的原因：1.钱没有给到位 2.心委屈了。
+
+客户是人，而不是模式化的形象。
+
+锁定目标受众时推荐的做法：
+锁定小范围的群体：从受众群体的细节特征入 手。
+想其所想：换位思考，用他们的视角评判你的产品／服务。
+深入挖掘：注意他们所处的环境、消费心态、情绪、动机和內心渴望。
+开展调查：检验你的理论，并用数据支撑它。
+
+疟疾
+
+书中自有黄金屋，书中自有颜如玉。
+
+再富不能富孩子，再穷不能穷教育。
+
+舍得便是获得。
+
+因为有爱，每句话要好好说。
+
+如果当你一天到晚拿着手机刷着微博，
+坐在家里 宅着看电视，
+天天上着网，
+做着那些80岁以后都能干的事
+你要青春干什么呢？？？
+
+梦想不会逃跑，逃跑的总是自己。
+
+吃不穷喝不穷，算计不到才穷。
