--- a/电商.md
+++ b/电商.md
@@ -1,4 +1,5 @@
 # 选品思路总结
+
 1. 通过找无货源同行卖的好的好产品来选品
 2. 通过生意参谋找蓝海词，再找蓝海品来选品
 3. 找同行同等级店铺卖得好的产品来跟品选品
@@ -14,9 +15,8 @@
 13. 思路之，用别人已经在市场经过验证接受的产品来选品
 14. 跨界蓝海，在一个平台上火的产品，别的平台还没有，移植过来就行了。
 
-# 拼多多快速盈利法
+## 拼多多快速盈利法
 
 1. 领券中心玩法高额券。10-25 之间的券，不需要开车。一两个星期后，一般就会有1500左右的免费访客。一天出个几十单，做10个链接，可以一天出几百单，大概一天1000多的利润，并且后续还会增长。这个玩法的特点是，拼多多领券中心高额券权重高的规则逻辑，可以完全不开车拿到免费流量。单量不大，对于怕亏损的玩家可以先从这个开始玩。一般一两周就可以进入盈利期。
 2. 9.9五折抢2000件玩法。首先确定品评分OK，然后就是报2000份的活动，活动结束恢复目标价。一般只留5元，2元领券中心，2元留给直通车，1元作为利润。然后推广跟上，其他不动。活动结束直接有9.9活动资源位，权重很高，没有历史最低价记录。后续平台各种活动可以接着玩，基本上一个月左右这个品就可以进入盈利期。
 3. 限量折扣工具玩法。建议细分市场的小品类，直接通过后台的限量折扣工具，不用求小二。第一次5折300件，第二次6折500件，第三次就7折卖500件，后面慢慢涨，基本上到了8折的时候就会进入盈利期了。这个期间直通车一直开车。如果是细分市场的品，基本上3到7天就会打爆，进入销量排行榜。其他资源位蜂拥而来。前提也是品要靠谱，评分要能稳住。这个不求小二，自己做5折抢，亏损可控，打爆速度很快。一般一个月左右进入盈利期。
-
