--- a/电商.md
+++ b/电商.md
@@ -28,3 +28,19 @@
 同时，你也能学到很多优秀商家的经验，学习他们是怎么满足用户需求的。哪怕我住酒店，我都能看到这家酒店做得有哪些优秀的地方，让我很舒服。而营销技巧这个级别的事情，只要你足够勤奋，把同行最好的东西学过来，执行力强，学习力强，你就不会差。比如说同行的广告图，同行的包装，这些都是只要看到就能够抄过来的东西。
 
 但是对客户需求的思考和理解，才是你能够超越你同行的地方。
+
+## 影响标品转化率的因素
+
+1. **价格因素**同类产品而言，在其他因素相同的情况下,你比竞争对手价格低一点,转化率明显会超过对手。
+2. **销量因素**标品受到价格排名的影响因素更大，因此马太效应会更加明显,也就是说卖得好的会非常好,卖的差的会非常差。
+3. **品牌因素**大品牌它会自带品牌流量,也有平台流量倾斜,一般会挤压内幕的生存空间。
+4. **服务因素**一般包括发货、配送速度、售后能力、评价、质量等。
+
+我在电商近八九年了,我认为**排名**对卖家来说是比较重要的,因为用户更倾向选择销量靠前的店铺。另外要重视**评价**的重要性,负面评价的内容也会影响买家的购买决策,而且它转化周期比较长,买家会反复加购,反复货比。还有服务的专业度,买家更看重我们店铺的服务能力,客服专业度和售后满意度,他们也很关注促销、大促之类的优惠活动,这样更能促进买家的下单欲望。
+
+另一个是**标品的文案**,一般主图看文案,文案看价格,文案最大的卖点都集中在价格上。价格差距较小,销量排序下排名靠前的产品价格处于同一区间的话,销量差距会比较大，一般第一名和第一页和最后一页,销量差距往往是10~20倍的。
+
+还有对**供应链的掌控能力**,因为随着我们体量增加,店铺的资金盘也会水涨船高,风险市场也大大增强,所以在供应链端我们一定要把控好。
+
+未来我们更应该向品质化、专业化、品牌化方向发展。因为只有品牌化,才有溢价空间,前期可以靠着低价和排名去抢占市场,但价格战始终不是长久之计,杀敌一千,自损八百,没有钱赚的生意是不能长久维持的,品质化才能长久,而且如果不能保证品质,也会增加非常多的维护成本,难以在竞争中保持下去。
+
