--- a/电商.md
+++ b/电商.md
@@ -36,7 +36,7 @@
 3. **品牌因素**大品牌它会自带品牌流量，也有平台流量倾斜，一般会挤压内幕的生存空间。
 4. **服务因素**一般包括发货、配送速度、售后能力、评价、质量等。
 
-我在电商近八九年了,我认为**排名**对卖家来说是比较重要的,因为用户更倾向选择销量靠前的店铺。另外要重视**评价**的重要性,负面评价的内容也会影响买家的购买决策,而且它转化周期比较长,买家会反复加购,反复货比。还有服务的专业度，买家更看重我们店铺的服务能力，客服专业度和售后满意度，他们也很关注促销、大促之类的优惠活动,这样更能促进买家的下单欲望。
+我在电商近八九年了，我认为**排名**对卖家来说是比较重要的，因为用户更倾向选择销量靠前的店铺。另外要重视**评价**的重要性，负面评价的内容也会影响买家的购买决策，而且它转化周期比较长，买家会反复加购,反复货比。还有服务的专业度，买家更看重我们店铺的服务能力，客服专业度和售后满意度，他们也很关注促销、大促之类的优惠活动，这样更能促进买家的下单欲望。
 
 另一个是**标品的文案**，一般主图看文案，文案看价格，文案最大的卖点都集中在价格上。价格差距较小，销量排序下排名靠前的产品价格处于同一区间的话，销量差距会比较大，一般第一名和第一页和最后一页，销量差距往往是10~20倍的。
 
