--- a/《高效能人士的七个习惯》笔记.md
+++ b/《高效能人士的七个习惯》笔记.md
@@ -36,8 +36,11 @@
 阿波罗11号的月球之旅，让我们亲眼目睹了人类第一次在月球上行走的奇观，令人叹为观止。但前提是宇宙飞船必须先摆脱强大的地球引力，为此在刚升空时的几公里消耗的能量比之后几天几十万公里旅程消耗的能量还要多。
 习惯也一样有极大的引力，只是许多人不加注意或不肯承认罢了。要根除做事拖沓、缺乏耐心、吹毛求疵或自私自利这些根深蒂固的不良习性，仅有一点点毅力、只做一点点改变是不够的。“起飞”需要极大的努力，然而一旦脱离了引力的束缚，就会迎来广阔的自由天地，创造出高效能生活所必需的凝聚力和秩序。
 
-![image.png](https://cdn.nlark.com/yuque/0/2019/png/103904/1566834847399-2c35b4ce-b108-4427-b579-4c6a7ca177f5.png#align=left&display=inline&height=353&name=image.png&originHeight=458&originWidth=454&size=109077&status=done&width=350)
-![image.png](https://cdn.nlark.com/yuque/0/2019/png/103904/1566834894388-2fe197bf-2f80-46a7-b6c6-212d5e8becee.png#align=left&display=inline&height=356&name=image.png&originHeight=844&originWidth=830&size=242032&status=done&width=350)
+![zs](《高效能人士的七个习惯》笔记.assets/zs.png)
+
+
+
+![7moxin](《高效能人士的七个习惯》笔记.assets/7moxin.png)
 
 ### 习惯一  积极主动——个人愿景的原则
 
@@ -45,7 +48,7 @@
 
 弗兰克尔曾指出人生有三种主要的价值观：一是经验价值观，来自自身经历；二是创造价值观，源于个人独创；三是态度价值观，即面临困境时的回应。这三种价值观中，境界最高的是态度价值观。
 
-![image.png](https://cdn.nlark.com/yuque/0/2019/png/103904/1566835291999-ba86293a-29f4-414f-a9ed-11be60e5b567.png#align=left&display=inline&height=219&name=image.png&originHeight=438&originWidth=844&size=147533&status=done&width=422)
+![guan](《高效能人士的七个习惯》笔记.assets/guan.png)
 
 影响圈的核心就是做出承诺与信守诺言的能力。积极主动的本质和最清晰的表现就是对自己或别人有所承诺，然后从不食言。
 
@@ -104,7 +107,7 @@
 一个人的思维定式能决定他的态度和行为，就好像“透镜”能影响一个人对世界的观察一样。生活中心不同，产生的观念也就各异。
 以原则为生活中心的人总是见解不凡，思想与行为也独具一格，而坚实、稳定的内在核心赐予他们的高度安全感、人生方向、智慧与力量，会让他们度过积极而充实的一生。
 
-![image.png](https://cdn.nlark.com/yuque/0/2019/png/103904/1566867873914-267a69eb-3b7a-46e3-9079-bd0148cedb38.png#align=left&display=inline&height=298&name=image.png&originHeight=596&originWidth=626&size=106342&status=done&width=313)
+![shenghuozhongxing](《高效能人士的七个习惯》笔记.assets/shenghuozhongxing.png)
 
 许多组织，包括家庭，都有一个最根本的问题，那就是成员并不认同集体目标。唯有参与，才有认同，这个原则值得强调再强调。
 一个真正反映每个成员的共同愿景和价值观的使命宣言，能调动他们的创造力和奉献精神，使他们不再需要旁人的指挥、监督和批评，因为他们已经接受了不变的核心原则，接受了企业为之奋斗的共同目标。
@@ -122,13 +125,16 @@ ACTIONS
 
 ### 习惯三  要事第一——自我管理的原则
 
-![image.png](https://cdn.nlark.com/yuque/0/2019/png/103904/1566836289380-b6fe0cbe-8511-40a7-969e-e37eb486497b.png#align=left&display=inline&height=258&name=image.png&originHeight=516&originWidth=844&size=151108&status=done&width=422)
+![shijing](《高效能人士的七个习惯》笔记.assets/shijing.png)
+
 如果你过分注重第一类事务，那么它们的范围就会变得越来越大，最终占据你全部的时间和精力。
 
 高效能人士总是避免陷入第三和第四类事务，因为不论是否紧迫，这些事情都是不重要的，他们还通过花费更多时间在第二类事务上，以期减少第一类事务的数量。
 
 第二类事务包括建立人际关系、撰写使命宣言、规划长期目标、防患于未然等等。人人都知道这些事很重要，却因尚未迫在眉睫，反而避重就轻。
-![image.png](https://cdn.nlark.com/yuque/0/2019/png/103904/1566836386858-eccfb1fa-ef1a-4d26-b179-3ded2dd45b56.png#align=left&display=inline&height=183&name=image.png&originHeight=366&originWidth=846&size=52594&status=done&width=423)
+
+![piangzhong](《高效能人士的七个习惯》笔记.assets/piangzhong.png)
+
 
 “对人不可讲效率，对事才可如此。对人应讲效用，即某一行为是否有效。”
 
@@ -155,7 +161,8 @@ ACTIONS
 
 前三个习惯着眼的是“个人领域的成功”，帮助个人从“依赖期”成长为“独立期”。
 具备自由、独立、自主的人格以后，方可踏实迈向“公众领域的成功”，抵达“互赖期”。（再贴此图）
-![image.png](https://cdn.nlark.com/yuque/0/2019/png/103904/1566869141071-2ae5d7da-7902-4503-883a-3563626968da.png#align=left&display=inline&height=347&name=image.png&originHeight=794&originWidth=802&size=227881&status=done&width=350)
+
+![chenggong](《高效能人士的七个习惯》笔记.assets/chenggong.png)
 
 所谓情感账户，储存的是增进人际关系不可或缺的“信赖”，也就是他人与你相处时的一份“安全感”。能够增加情感账户存款的，是礼貌、诚实、仁慈与信用。
 
@@ -191,7 +198,7 @@ ACTIONS
 - 舍己为人（输/赢）
 - 好聚好散（无交易）
 
-![image.png](https://cdn.nlark.com/yuque/0/2019/png/103904/1566869981155-4a964a41-9dc4-4d6f-aae3-2560928a85dd.png#align=left&display=inline&height=168&name=image.png&originHeight=336&originWidth=858&size=88010&status=done&width=429)
+![shuangying](《高效能人士的七个习惯》笔记.assets/shuangying.png)
 
 双赢思维的五个要领
 
@@ -291,7 +298,7 @@ ACTIONS
 统合综效的基本心态是：如果一位具有相当聪明才智的人跟我意见不同，那么对方的主张必定有我尚未体会的奥妙，值得加以了解。
 与人合作最重要的是，重视不同个体的不同心理、情绪与智能，以及个人眼中所见到的不同世界。与所见略同的人沟通，益处不大，要有分歧才有收获。
 
-![image.png](https://cdn.nlark.com/yuque/0/2019/png/103904/1566871191193-8d3f2ae9-d93d-453e-a15c-0836006372cd.png#align=left&display=inline&height=230&name=image.png&originHeight=460&originWidth=884&size=85093&status=done&width=442)
+![gongtong](《高效能人士的七个习惯》笔记.assets/gongtong.png)
 
 尊重人与人之间的差异，当有人不同意你的观点的时候，你应该试着寻找统合综效的第三条道路，一般情况下它总是存在的。如果你坚持双赢模式，确实愿意努力理解对方，你就能找到一种让每一个人都受益更多的解决方案。
 
@@ -305,8 +312,8 @@ ACTIONS
 人生最值得的投资就是磨炼自己，因为生活与服务人群都得靠自己，这是最珍贵的工具。
 工作本身并不能带来经济上的安全感，具备良好的思考、学习、创造与适应能力，才能立于不败之地。拥有财富，并不代表经济独立，拥有创造财富的能力才真正可靠。
 
-习惯七就是个人产能。它保护并优化你所拥有的最重要的资产——你自己。它从四个层面更新你的天性，那就是：身体、精神、智力、社会/情感。
-![image.png](https://cdn.nlark.com/yuque/0/2019/png/103904/1566871415026-3a809787-dd1b-46da-aeb6-64a34d8de384.png#align=left&display=inline&height=292&name=image.png&originHeight=584&originWidth=740&size=140865&status=done&width=370)
+习惯七就是个人产能。它保护并优化你所拥有的最重要的资产——你自己。它从四个层面更新你的天性，那就是：身体、精神、智力、社会/情感。![molian](《高效能人士的七个习惯》笔记.assets/molian.png)
+
 
 - 身体
   - 很多人觉得自己没有时间锻炼身体，这种想法真是大错特错！每周只需要用3～6个小时锻炼，而这对一周当中余下162～165个小时有着巨大益处，是绝对必要的。锻炼身体不一定要有专门的器材，好的锻炼项目可以在自己家里进行，可以提升你的耐力、韧性和力量。
@@ -316,7 +323,7 @@ ACTIONS
   - 智力层面的更新主要靠教育，借此不断学习知识，磨砺心智，开阔视野。养成定期阅读优秀文学作品的习惯是拓展思维的最佳方式，这是第二类事务，人们可以借此接触到当前或历史上最伟大的思想。我极力推荐大家从每个月读一本书开始，然后每两周读一本书，接着是每周读一本书。磨砺心智的另一种有效方式是写作。通过不断记录自己的想法、经历、深刻见解和学习心得，我们的思路就会更加明晰、准确和连贯。
 - 社会、情感
 
-![image.png](https://cdn.nlark.com/yuque/0/2019/png/103904/1566871654258-d4aea75e-8da5-4d70-a698-f61b64c1493e.png#align=left&display=inline&height=348&name=image.png&originHeight=696&originWidth=982&size=210594&status=done&width=491)
+![luoxuan](《高效能人士的七个习惯》笔记.assets/luoxuan.png)
 平衡地、螺旋式提升自己各方面能力。
 
 ACTIONS
@@ -330,4 +337,5 @@ ACTIONS
 
 有人说过：“我们能赠予子孙的永存遗产只有两种——根和翅膀。”
 
-![image.png](https://cdn.nlark.com/yuque/0/2019/png/103904/1566872133079-1313446f-b79c-4687-a6e6-439d757e1d5d.png#align=left&display=inline&height=586&name=image.png&originHeight=1172&originWidth=968&size=190827&status=done&width=484)
+![jihua](《高效能人士的七个习惯》笔记.assets/jihua.png)
+
