--- a/营销.md
+++ b/营销.md
@@ -13,3 +13,20 @@
 > 购买一个好产品确实需要慎重考虑，看得出来你对我们产品还是感兴趣的，否则也不会花时间来考虑，那么您现在是顾虑哪方面呢？你可以把我当成朋友咱们就聊聊天，毕竟我在这个行业做了很长时间了，相对还是比较专业的，可以给我的朋友一些客观的建议，你觉着呢。
 
 当客户把问题说出来后，我们就可以针对问题去解决问题。
+
+## 私域
+
+定位定天下，定价定江山。
+
+1. 高客单
+2. 高复购
+
+私域五力
+
+1. 加微力
+2. 内容力
+3. 运营力
+4. IP力
+5. 产品力
+
+知识
