--- a/知识笔记.md
+++ b/知识笔记.md
@@ -42,3 +42,10 @@
 
 1. 天道酬勤：意思是上天会按照每个人付出的勤奋，给予相应的酬劳。多一分耕耘，多一分收获，只要你付出了足够的努力，将来也一定会得到相应的收获。出自《周易》中的卦辞：“**天行健，君子以自强不息；地势坤，君子以厚德载物**”。
 2. 厚德载物：意思是指君子的品德应如大地般厚实可以承载万物。厚德载物，作为中华民族的精神和优良传统是十分重要的。一个有道德的人，应当像大地那样宽广厚实，像大地那样承载万物和生长万物。语出《周易》：“地势坤，君子以厚德载物。”
+
+## 为什么要努力读书
+
+1. 努力读书，不一定能挣很多钱，却可以看见更大的世界。
+2. 努力读书，不一定能大富大贵，却能有更多的选择机会。
+3. 努力读书，不一定会让你的智商更高，却能让你从容应对生活。
+4. 努力读书，不一定能让您成为完美的人，却能帮您不断完善自我。
