--- a/印刷知识.md
+++ b/印刷知识.md
@@ -438,3 +438,37 @@ JPG和TIFF格式支持CMYK模式，而PNG和GIF不支持。
 ![潘通色号](printing-check.assets/pt-h.png)
 
 ![潘通色号](printing-check.assets/pt-i.png)
+
+## 保护性工艺
+
+### 覆膜
+
+![覆膜](printing-check.assets/fm.jpg)
+
+### 上光
+
+![上光](printing-check.assets/sg.jpg)
+
+### 压光
+
+![压光](printing-check.assets/yg.jpg)
+
+### 逆向UV
+
+![逆向UV](printing-check.assets/nxuv.jpg)
+
+## 装饰性工艺
+
+### 局部UV
+
+![局部UV](printing-check.assets/jbuv.jpg)
+
+### 烫印(烫电化铝)
+
+![烫印](printing-check.assets/ty.jpg)
+
+### 压凹凸
+
+击凸
+
+击凹
