--- a/印刷知识.md
+++ b/印刷知识.md
@@ -431,7 +431,11 @@ JPG和TIFF格式支持CMYK模式，而PNG和GIF不支持。
 
 ![潘通色号](printing-check.assets/pt-e.png)
 
+[在线工具A：查找匹配最接近的潘通色号](https://www.kmhpromo.com/cmyk_to_pms/)
+
 ![潘通色号](printing-check.assets/pt-f.png)
+
+[在线工具B：查找匹配最接近的潘通色号](https://www.qtccolor.com/secaiku/Color/6360)
 
 ![潘通色号](printing-check.assets/pt-g.png)
 
