--- a/健康与运动.md
+++ b/健康与运动.md
@@ -197,3 +197,392 @@ BMI值越小越好。错误
 4. 倒步走(可以两个人一正，一反)
 
 ### 球类运动的健康机制
+
+# 跑步
+
+## 参加马拉松运动的基本常识
+
+### 为什么参加马拉松比赛前要进行体检?
+
+参加马拉松比赛前几天一定要进行身体检查，以防参赛过程中发生意外事故。因为有些人身体本来就存在着隐疾(有些疾病自己尚未发现)，如参加运动强度和紧张程度比较大的比赛，有可能促使隐疾爆发，发生意外。特别是患有心血管病人如早期高血压、隐性冠心病、糖尿病;呼吸系统疾病如肺心病、慢性支气管炎以及肝炎、肾炎、老年骨质疏松等，不宜参参加比赛。正常人体检如发现下列情况之一者不应参加比赛：安静时心率达85次/分;血压在140/90毫米汞柱以上;冠心病、频发性心率不齐、房室传导阻滞及其它心脑血管疾病;有慢性病史现活动期、有慢性病史现稳定期但继续参加专项运动时间不满三个月以上者; 赛前一周内患感冒发烧、胸闷憋气、心悸症状连续三天以上;严重失眠;胃肠道疾病;赛前72小时内有外伤史者;安静时呼吸频率达24次/分;体温在摄氏37度以上;肝功能异常;尿检查有尿蛋白及管型等。
+
+### 为什么赛前要排空大小便?
+
+食物通过胃肠的消化，营养成分被身体吸收了，剩下的残渣就结成了粪便。身体内多余的水分，加上肌肉和血液中代谢的废物，通过肾脏的过滤，形成了尿液。由于这些代谢废物在直肠和膀胱内积存，增加了身体的重量和负担，使人运动时不轻松。此外，膀胱壁很薄，被尿液充满后，容易受到运动中意外的碰撞而发生破裂，造成严重的后果。因此，在比赛前排空大小便是很有必要的。
+
+### 为什么赛前要做好充分的准备活动?
+
+马拉松运动是一项长距离有氧运动，比赛前必须刺激运动中枢神经的兴奋灶，使身体各系统、器官(肌肉、血液系统、呼吸系统、运动系统)之间建立一定的协调性，而这一切必须通过循序渐进的准备活动才能达到。通过准备活动，使人体体温升高，肌肉的协调性、伸展性和弹性会得到提高，而肌肉的粘滞性则会降低。如果准备活动不充分，比赛时很快会出现疲劳、肌肉僵硬和酸痛、呼吸急促，甚至不想继续跑下去。因此，只有做好充分的准备活动，才能适应比赛的需要，更好的进入运动状态，避免运动损伤和发生意外。
+
+### 如何消除比赛前的紧张情绪?
+
+有些人参加马拉松比赛难免会产生一些不必要的紧张，主要表现为临近比赛情绪紧张、提早兴奋、坐立不安、睡眠不好、多汗、尿频等。由于过度兴奋、情绪紧张加上休息不好等原因，造成神经能量和体力消耗过大，到比赛时就很容易疲劳，从而影响比赛中的发挥和取得理想成绩。消除赛前的紧张情绪一般可采用转移兴奋点的方法，可以在赛前进行一些其他有益身心健康的比较平静、舒缓的活动，如看书、下棋、垂钓和散步等，也可采用按摩等方法，消除赛前紧张状态。
+
+### 选择什么样的鞋好呢?
+
+应当选用胶鞋或越野跑鞋为好，鞋内的海绵最好是泡沫橡胶的，这种鞋具有较大的缓冲性和保护作用，使脚掌不易疲劳也可以大大减小受伤的可能性。其次，要选择适宜的鞋号，过大过小都不好。最好是穿上鞋后，脚感舒适，并稍有空隙。鞋太小会使脚趾相互挤压，容易打血泡;鞋大穿上不跟脚且脚在鞋内晃动，容易损伤脚。比赛时最好穿八成新的跑鞋，脚对这样的鞋已经适应，不易打血泡，同时鞋的弹性还比较好，比较柔软，鞋底的纹路还没有磨掉，跑起来能用上劲。
+
+比赛出发时，如果跑鞋意外脱落，不要慌张，更不能弯腰处理，避免发生拥挤和摔倒。
+
+### 马拉松运动员喝什么样的“水”?
+
+在马拉松运动中，身体大量出汗而汗液的主要成分是水，还有钠、钾、氯、镁、钙、磷等矿物质。大量出汗后，随着水分的丧失，也失去很多盐分，体内的电解质因此而失去平衡，以致于人体对视、听觉刺激明显过敏，机体的调节能力也随之降低，此时如果单纯补充水分，会事与愿违越喝越渴，既达不到补水的目的，甚至会导致体温升高，小腿肌肉痉挛，昏迷等"水中毒"症状的发生。因此补充水分要喝电解质饮料，又称矿物质饮料，饮料中除了水外还包括钠、钾、氯、镁、钙、磷等矿物质及适量含糖物质，以矫正口味，补充机体的能量消耗。业余马拉松运动员可在比赛前2小时适当吃一些糖补充比赛能量消耗，一般按每千克体重1克左右为宜。比赛中及比赛后可以饮用盐开水，按1：15的比例添加盐和一些糖。
+
+### 如何预防和处理比赛中所出现的腹痛?
+
+比赛中有的运动员会突然出现腹痛，其原因一般来说是准备活动做得不充分，加上天气比较冷，开始跑时吸入了大量的冷空气或起跑速度过快等出现的“岔气”现象。出现腹痛时，应减慢速度，用手使劲压住疼痛部位，经过短时间的调整处理后，疼痛感会减轻或消失。如果经上述处理仍然无法缓解，应退出比赛进入救护站处理。为了预防比赛中出现腹痛，在赛前做好充分的准备活动是非常重要的。
+
+### 如何预防和处理小腿肚抽筋?
+
+在比赛中有时会出现小腿肚抽筋或小腿肌肉长时间不自主地收缩现象。原因是准备活动做得不充分，比赛时肌肉从静止状态突然进入比较剧烈的运动状态，小腿肌肉不能马上适应，尤其在气温比较低的情况下，穿短裤比赛腿部肌肉突然受到寒冷刺激或由于身体大量出汗带走许多盐份而引起小腿抽筋。因此，赛前准备活动一定要做得充分，要达到身体发热的效果，天气冷时要适当延长准备时间，还要注意小腿保暖。比赛中若出现小腿抽筋应该马上减慢速度逐渐停下来，然后进行小腿处理如按摩和揉搓抽筋部位，如不能缓解应进入救护站处理。
+
+### 如何预防和处理踝关节扭伤?
+
+踝关节扭伤俗称“崴脚”，是比赛中经常遇到的一种意外情况。“崴脚”会造成踝关节周围的肌肉、韧带等软组织撕裂，踝关节出现淤血、肿胀、疼痛。原因是准备活动不充分，跑步技术不正确，注意力不集中，路面不平及其他的影响等。预防踝关节扭伤的关键是做好充分的准备活动，完善技术，在比赛中提高安全意识，集中注意力以及平时加强对踝关节的锻炼。比赛中一旦出现踝关节扭伤，一般应退出比赛，进入救护站进行治疗。
+
+### 如何预防和处理肌肉拉伤?
+
+比赛中如出现肌肉拉伤，一般应退出比赛，进入救护站进行治疗。为了防止比赛中出现肌肉拉伤，在赛前要做好充分的准备活动，尤其要活动开下肢。体质较弱、训练水平不高的在比赛中要量力而行，不要速度过快，注意正确的技术动作，不要在后蹬和向前摆腿时用力过猛。同时在身体疲劳或肌肉酸痛的状态下应放弃参赛。
+
+### 运动过后出现昏厥怎么办?
+
+昏厥是由于脑中血液补充量减少，所造成的短暂没有知觉，通常几分钟后就会恢复。常见面色苍白、四肢湿冷、出冷汗、头晕、恶心、心跳急速、脉搏细弱、呼吸表浅甚至昏迷不醒等症状，这些症状可能发生在昏厥之前或当中。处理方法是让患者脸朝上平躺，抬高脚部20-30公分，头部稍低于下肢，维持畅通的气道和放松衣物，尤其是颈部衣物。如果患者呕吐，应让他侧卧防止堵塞呼吸道。经过上述处理病人清醒后应送救护站治疗。
+
+### 赛后如何进行放松?
+
+马拉松运动后认真放松，能使人从运动到停止运动之间有一个缓冲和整理的过程。比赛结束后应变为小步慢跑逐步停止不要突然停止，然后进行全身放松活动。上肢放松活动：站立，上肢前倾，双肩双臂反复抖动至发热止。下肢放松运动：仰卧、举腿、拍打、按摩，颤抖大腿内、前、后侧和小腿后侧，以及臀、腹、侧腰部。团身抱膝放松运动：双手抱膝，下蹲，低头，反复上下颤动至腰椎发热止。全身休整运动：站立，双膝屈，双手体前扶地，充分运用气息，深吸气于胸，“屏息”(即不呼也不吸，不是憋气)慢吐气于腹(即丹田)。如此反复几次，同时上肢慢慢抬起、直立，直至脉搏恢复至运动前正常脉搏。(常识内容根据厦门市卫生局供稿整理)
+
+## 22个关于跑步问答
+
+1. 相比专业马拉松运动员，大部分普通爱好者在冬季长跑中的装备选择、体能准备、技巧等方面都缺乏经验。请问您对这些爱好者有什么建议？
+答：我建议大家平时不要盲目训练！找一位专业的老师进行指导！这样才可有效避免伤病健康运动！装备方面主要是鞋子的选择！业余跑者没有很强的能力储备！所以跑鞋方面应该根据自身情况选择保护性强的比较好！另外最重要的除了跑就是不可或缺的身体素质及核心力量的练习！科学训练是关键！
+
+2. 怎样尽量不在运动过程中受伤呢？特别是一些比较容易受伤的部位？
+答：最重要的就是强化这些部位的力量！加强针对性练习！
+
+3. 冬天适合长跑吗？我出汗经常就冻住了
+答：冬天是一年当中储备能力的最好季节！所以最适合跑步！
+
+4. 好想知道长跑会不会让小腿越跑越粗呀？
+答：平时多做一些局部练习！不要总去健身房进行力量训练！这样腿很可能会变粗！
+
+5. 装备方面衣服有讲究吗？
+答：装备方面你主要注意鞋子的选择！初级练习者选择有减震效果的鞋子最好！
+
+6. 装备一定要排汗的吧！能推荐几款吗？
+答：冬天多采用速干比较好！因为棉质出汗不容易干！长时间贴在身体上会导致风湿关节炎等症状！
+
+7. 运动后该进行怎样的饮食？
+答：运动后要多吃蔬菜水果为宜！避免多吃肉食造成的乳酸堆积！腿部肌肉紧胀！
+
+8. 如何才能加强膝盖部位的力量？我们业余选手参加超过50公里的比赛，膝盖就会成为弱点啊！
+答：你先坚持做两个月以上的靠墙静蹲！这个最简单！然后改为单腿屈膝！再做两三个月！隔天做一次！时间15秒左右一组！组数根据身体承受力来定！
+
+9. 马拉松训练有一句：夏上强度冬上量，我现在最好成绩是307 ，进300的话，冬季如何训练，是不是多上跑量？
+答：你说的非常对！这就是我们这期训练营为何不给大家练习强度的原因！你冬天就要加强跑量！配速其次！量为主！
+
+10. 关于呼吸您再给点建议呗！
+答：呼吸自己舒服即可！速度有慢到快！呼吸自然平稳！不要忽然加速！也无需刻意追求几步一呼！几步一吸！运动当中越是注意这些呼吸节奏越乱！
+
+11. 跑全程马拉松一直都是前脚掌落地吗？
+答：这个我可以做到！但是我有十多年训练基础！所以如果基础不扎实先不要刻意追求前掌落地的问题！先加强自身体能及针对性练习为主！
+
+12. 冬季的严寒会给一些爱好者在冬季长跑的过程中带来不适。那么请问三位在冬季长跑中补充水分和营养方面的控制与平时是否有什么不同呢？
+答：冬季日常营养主食应以碳水化合物为主！也就是各种谷物内所含的糖！另外水果蔬菜可以满足人体对维生素和必备微量元素的补充！冬季运动中补水不需如此频繁！运动过程中可服用运动饮料！运动后也可自制盐糖混合水运动补剂！相对其它季节平日饮食储备最为关键！
+
+13. 请问一下吴教练，对于马拉松锻炼。一些超长的距离跑，例如100KM跑，是否对马拉松有帮助？
+答：没有帮助！如果没有一定训练积累或积累不够就去挑战这样的极限运动对身体只有伤害没有帮助！你想挑战全马就要从日常训练中做积累！量是最重要的！量的积累在冬天训练最好！
+
+14. 对赤足跑怎么看？
+答：赤足跑暂时不太适合亚洲人！可以偶尔作为一项训练！训练的时候也最好是沙滩赤足！但不可长期赤足！但也不排除有一些奇人！
+
+15. 正确的技术动作是怎么样的呢？有时自己很难发现，昨天让朋友用手机跟拍自己跑步的姿势，有点怪怪的。
+答：头要正直向前看！身体稍微前倾！但也不可含胸！摆臂前后！大小臂保持九十度角即可！不要下座跑！腿也不可内外八字！脚也是正直向前方向！
+
+16. 冬季长跑，气候相比会较恶劣，路面也更容易出现湿滑结冰等问题。也因此在遇到这些情况时，选则适合的鞋底就显得尤为重要了。针对鞋底的选择三位能否给大家一些建议？
+答：冬季选择运动鞋的鞋底材料应该是防滑耐磨型的！底部花纹错落有致！整体与地面接触面积大！具有一定抓地效果！鞋底设计能有效分散地面的冲击力！应具弯曲功能！不能太硬或太软！因为太硬冲击力较大！太软则跑的费力！另外因为冬季路面较硬有减震效果的鞋底为首选！
+
+17. 几个月前参加了人生第一个全马，然后就深深爱上不能自拔。虽成绩很不理想，但对自己承诺下一届前要竭尽全力训练。最近10KM成绩进步很大，感觉一下子好似。
+答：那你最好平时再多加强一些核心肌群的练习！这些训练不可忽略！胫！肩！腰！髋！腿！足等！
+
+18. 跑步时到底是脚尖先落地还是脚跟先落地？
+答：前脚掌着地能有效缓解地面对膝盖造成的冲击力！因为有脚弓部分的缓冲！可是后脚跟就没有任何缓冲！反作用力直接传达到你的膝盖！所以你需要慢慢改正现在的技术动作！
+
+19. 全脚掌着地会不会引起足弓塌陷 一直很担心这个问题
+答：最后目标是可以慢慢过渡到前脚掌落地！全脚掌落地只是针对训练初期！没有很强的运动基础！足部各部分肌肉关节力量欠缺的时候！所以慢慢加强针对性练习！尽快过渡到正确动作是最重要的！
+
+20. 赛后恢复最为重要！不要着急投入下一场比赛！全马过后最好两个月之后再考虑参加下一场赛事！彻底恢复是关键！身体健康是首位！冬季训练不着急练习强度课！能力储备最重要！一月内不要练习强度课！等待春季的到来吧！大家加油！
+
+21. 马拉松结束，这几天大家不要一下停止运动！记得出门进行一下排酸跑！不要偷懒！大概每天半小时左右慢跑！不求速度坚持三天！在此期间每天做一下按摩！尤其是腿部！让紧张的肌肉充分得到放松！吃饭的时候多补充糖分！主食可多吃些谷物类！也可补充一些淡盐水！以弥补身体消耗的盐分！
+
+22. 马拉松之后大家有没有按照要求去进行恢复训练呢？一定切记身体最重要！厦马后一周内！至少慢跑三天以上！来进行身体内积聚的乳酸堆积的排除！
+
+## 跑步饮食建议
+
+耐力跑运动由于时间长、消耗大，所以饮食要特别讲究，赛前一周应特别注意饮食的质量，供给较全面的营养素，以增加能量贮备，尤其要增加糖量。另外由于耐力跑运动员新陈代谢旺盛，维生素C消耗增加，所以在赛前应多吃含维生素C丰富的水果和蔬菜。如果能了解比赛期间的饮食制度及安排，在赛前可模拟比赛期的饮食制度，以免突然发现饮食制度和内容不习惯而造成影响比赛。
+
+赛前最大量储存糖原是至关重要，因为耐力跑中身体对储存的糖原的使用量低于耐力跑后使用量，从而通过利用脂肪作为燃料以部分补充能量的短缺，能为高水平提供10%，低水平50%能量需要。赛前三四天碳水化合物,但不是吃得过多过饱。以至于有撑涨感。另外补充些流质食物，利用糖原储存。
+
+赛前晚上一顿好的晚餐使你比赛当天早上可以不必吃得过多。比赛前早餐实际无助于成绩，但是保证不要空肚子。如：馒头、发面饼、蛋糕、果汁、面包、蜂蜜水、茶等。赛前1小时可补充少量单糖、葡萄糖、双糖、麦芽糖等。禁止水太多。不然小便太多。
+
+比赛前半小时不要饮水，给自己充足时间排掉过量液体。比赛中少饮，次多。每次100-150毫升/5公里。平时训练时要在训练中锻炼饮水。不要等口渴时再喝，这时，你已经严重失水。
+
+维生素的缺乏对运动能力有损害，可在比赛前补充一定量的维生素。在补充维生素时，应注意，维生素b1的补充至少要在比赛前10～14天开始补充，每日维生素b1补充5～10毫克。维生素c的补充在200毫克以上。补充的途径可依靠食物，如富含维生素b1的粗粮、花生、核桃、豆类等；富含维生素c的新鲜蔬菜和水果等。也可补充维生素制剂。
+
+不要限制你食物中的盐，但不能太多。
+
+营养要求：
+
+1. 食物热量要高；
+
+2. 食物体积和重量要小，易于消化；
+
+3. 食物多样化，防止偏食；
+
+4. 防止暴饮暴食；
+
+5. 饮食中适量增加VB，VC。
+
+部分食物能提高耐力有利于：玉米、紫菜、桔子、豆腐、海带、蜂蜜、猕猴桃等。
+
+## 跑步训练计划
+
+### 力量
+
+不管什么年龄的跑步者，很少有人努力去锻炼腿部以外的肌肉。但是，在日常训练中，有规律地安排一系列简单的上身力量练习，将有效地提高训练者的跑步能力。目的是提高肩臂的力量和耐力，以及腹部和背部肌肉的力量。通过合理地利用双臂，跑步者的成绩可以提高近12%。不知道利用双臂的普通的跑步者就很不幸，跑步的距离越长，双臂就越疲劳。双臂能有效地维持步幅是因为他们像一个节拍器一样有节律地带动着腿的节奏。
+
+增加上臂的力量可通过简单的俯卧撑练习。做俯卧撑时不用太快，并注意两臂的宽度来加强背、肩、臂的力量，所有这些部位在长跑的最后阶段将起重要的作用。不要一下子做得太多，刚开始做4次到5次即可，然后，随着力量的增加而逐渐增加次数。做俯卧撑的好处在于用你自身的体重提供阻力，而不需要投资任何设施。
+
+跑步时，另一块重要的肌肉是腹部肌肉。无力而松弛的腹部是你在长跑训练、比赛的最后阶段步幅减小、胸腔缩小，运送到腹部的空气总量减少。此外由于腹部肌肉的力量差，可能会给和腹部相对的腰部肌肉带来麻烦。解决的办法是有计划、有规律地做仰卧起坐。这个练习使背部、腰部、腹部肌肉都会得到锻炼。把加强上身力量融入到你的日常跑步中去，简单的方法就是像每天跑完步后要做整理运动一样来做它。一开始做10个仰卧起坐，5个俯卧撑和20次双臂屈伸，在两个星期后增加到12个仰卧起坐，6个俯卧撑和24个双臂屈伸。
+
+尽可能地加强跑步的力量，一旦有了一定的耐力基础，加大步幅最简单的方法就是山地跑。有规律的山地跑计划将对日常跑步产生奇效，对比赛成绩更是有显著效果。山地跑可增强跑步者的大腿力量，增强腿部的协调性，更可增强大脑的协调性。
+
+### 山地跑训练
+
+进行山地跑训练可以慢慢开始。首先，在山地跑训练时不必跑很陡的山。如果跑很陡的山，那么，所做的唯一的事即是爬山。理想的山地跑，其山路长为四分之一英里，山的坡度不要太陡，这样既能锻炼到腿的后蹬力量，又不至使肌肉过分紧张。其次，尽量做上山跑。因为当你做下山跑时，地面对脚、踝、膝和腿的撞击力加大了(大约为体重的4到5倍)。而当你做上山跑时，撞击力会小很多，更有利于加强大腿的力量，有助于跟腱的拉伸。下山跑时要减小跑的步幅。
+
+根据其他系列山地跑的效果，第一周，跑一次；第二周，跑两次。在你计划参加比赛的前8到10周，把山地跑有效地融入你每周的大强度训练之中。每周重复1到2次，使山地跑在日常、有规律地中等强度训练中占到中等比例。
+
+### 跑步前要做的准备活动
+
+人体各内脏器官及四肢从相对静止状态到较紧张活动需要有个适应过程，因此，人在进行跑步前同样要作适当的准备活动，使机体生理机能能够在动的情况下协调地工作。如果跑前不做准备活动，长跑时往往会发生关节韧带、肌腱扭伤。特别是一起身就进行紧张的跑步，更易发生。跑步前一般可做以下几节准备活动：
+
+1. 站立，两手叉腰，交替活动踝关节；
+
+2. 半蹲，两手扶膝活动膝关节；
+
+3. 两腿交替高抬腿，活动髋关节；
+
+4. 两手叉腰旋腰，活动腰部；
+
+5. 一手扶持，依次前后踢腿、活动髋、膝关节；
+
+6. 前后弓箭步压腿；左右压腿，牵扯腿部韧带；
+
+7. 上体前后屈以及上肢的轻微活动等。
+
+只有正确的姿势才能让你跑得快，效率高，而且不易受伤。消耗脂肪的关键之一是尽量用接近你的无氧界限(无氧阈)的运动强度跑步，而正确的姿势能使你无需浪费额外的能量就能达到这个强度。
+
+### 训练时间选择
+
+只要适合自己晨练晚练都无妨。“从理论上来说，黄昏时分，大气内的氧气浓度最高，人的感觉最为灵敏，协调能力最强，体力的发挥和身体的适应能力最强，并且这时血压和心率既低又平稳，确实是适宜锻炼的好时段。”专家说，但是，这并不表示一天中的其他时间就不适合运动。
+
+不同的人之间存在明显的个体差异，心肺功能、体质状态不同，其运动时间、运动频次、运动方式也不应千篇一律。应该说，锻炼的最佳时间并不是绝对的，各人之间肯定存在一定的差异。如果有条件的话，专家建议，最好根据健康体检单和自己的作息及饮食规律，咨询一下医生。
+
+此外，对于都市中的上班族来说，黄昏时分有的正在加班，有的正在匆匆忙忙往家里赶，正是忙忙碌碌的时候，让他们每天挤出一个小时做运动，非常不现实。
+
+其实，对绝大多数正常体质的人来说，只要避开饭前半小时、饭后一小时以及睡觉前一小时内，其他任何时间都可以进行体育锻炼。如果已经养成了晨练的习惯，持之以恒一定也会获益多多，根本没必要改成晚练。
+饭前、饭后不宜进行跑步。饭后跑步或跑步后立即进食都会引起胃酸分泌减少，影响对食物的消化，久而久之会引起胃病，一般饭后一个小时后进行锻炼为好，睡前跑步锻炼不好，睡前锻炼会使大脑皮层处于高度兴奋状态，产生多梦或不容易入睡的不良反应。
+
+但是，早晨不宜于空腹进行大运动量锻炼，如果健身长跑的距离比较长时，可先喝一小杯糖水或少吃一点点心类的食品。
+
+### 训练最佳时段
+
+早晨时段：晨起(日出后)至早餐前
+上午时段：早餐后2小时至午餐前
+下午时段：午餐后2小时至晚餐前
+晚间时段：晚餐后2小时至傍晚(日落前)
+
+### 身体条件要求
+
+若患有以下慢性病，不宜爬山：
+
+1. 运动障碍慢性疾病：关节病，皮肌炎，风湿炎等
+
+2. 呼吸系统慢性疾病：肺心病，慢性气管炎
+
+3. 循环系统慢性疾病：高血压、冠心病，特别是慢性冠状动脉供血不足
+
+4. 慢性肾炎
+
+5. 血液病
+
+6. 糖尿病伴有合并症
+
+7. 痛风
+
+8. 红斑狼疮
+
+9. 肝硬化
+
+以上患者如果执意要爬山，请记住一定要慢爬，而且不必强求登到山顶。
+
+## 跑步技术
+
+跑步主要用于快速行进。跑步的第一步一定要跃出去，前脚掌着地，在整个跑步过程中，都不能全脚掌着地；立定时，要注意靠腿和放臂的一致性。
+
+跑步是一门学问，最科学的锻炼方法才能达到最好的效果。
+
+### 速度
+
+提高速度可以通过三种方法：
+
+1. 增加步频
+
+2. 增大步幅
+
+3. 既增加步频又增大步幅
+
+第一种方法比第二种方法更可取，步幅的增大会造成步幅过大，进而会引起某些生物力学上的问题和运动损伤。速度训练，尤其是在田径场的速度训练应该是逐渐的（无痛的）提高步频和步幅的训练。重要的是要循序渐进地提高。
+
+### 呼吸
+
+人在跑步时，人体所需氧气需要量随着跑步速度加大而相应增加，为了改变这种情况，需要加快呼吸频率和增加呼吸深度。但是，呼吸频率的加快是有一定限度的，一般最有效的范围是每分钟35～40次。如每分钟最高达到60次，平均一秒钟就要进行一次呼气和吸气，这样势必使呼吸变浅，换气量减少，影响氧气的吸入和二氧化碳的排出，使血液中二氧化碳浓度升高，氧浓度降低。
+注意呼吸节奏均匀。跑步时，有意识地把双脚步伐节奏与呼吸节奏协调起来，一般来说，根据自己体力状况和跑步速度变化，可以采取二步一吸、二步一呼或三步一吸、三步一呼的方法。当呼吸节奏与跑步节奏相适应并形成习惯后，就可避免呼吸急促表浅和节奏紊乱，对加深呼吸的深度极为有利。同时还可减轻呼吸肌的疲劳感和减轻跑步中“极点”出现所带来的不良反应。
+跑步时采用鼻子吸气。跑步时采用鼻子呼吸并与跑步节奏相协调，能满足体内氧气要求。随着跑步距离和强度加大，氧气需要量增加，改用口鼻吸气、口呼气的呼吸方式，在吸气和呼气时要做到慢、细、长，嘴微张呼气，忌大口快速呼吸或者喘粗气。跑步时呼吸急促，感气憋不畅时，是由于呼气不充分，二氧化碳排出不充分，占据在肺泡之中，限制了氧气的吸入。要想加大呼气量，就用口呼气，并有意识加大呼气的量和呼出的时间。
+呼吸的主要目的，在提供人体的氧气需求与排除体内多余的废气。人体安静休息时，每分钟约呼吸10至12次，每次呼吸的量 (潮气量) 约500ml，也就是说，人体在安静时的每分钟呼吸交换量约5至6公升。尽管每分钟吸入体内的氧气多达1000至1200ml，但是70公斤成人每分钟使用的氧气则只有300ml左右。人体最大运动时的换气量可以达每分钟100公升 (约安静时的20倍) ，但是人体的最大氧气摄取量则只有每分钟3000ml。这种呼吸交换量增加，氧气使用率反而降低的现象，似乎说明了呼吸并不是人体耐力运动表现的主要限制因素。
+尽管呼吸的氧气交换量(外呼吸)比身体组织的氧气交换量(内呼吸)还多，但是对於呼吸循环系统而言，不管是肺部的气体交换、心跳率、心脏每跳输出量人体的血流分布或静脉的回流等，都不是可以由意识控制的人体运动生理变项。
+唯有运动时的呼吸方式，才是可以由意识控制的运动生理反应，因此，适当了解跑步时的正确呼吸概念，也是相当有帮助的运动生理知识。
+
+1. 跑步速度与呼吸交换量
+经常有人提出跑步时，随著步伐（2吸1呼）、（2吸2呼）或其它节奏调整的呼吸频率(次数)概念。这种不考虑呼吸交换量大小的原则性说词，是相当错误的跑步呼吸调节概念。事实上，跑步的快慢与呼吸交换量成正比。人体在不同速度跑步时，每分钟的呼吸交换量可能相差达10倍以上，尽管跑步步伐的快慢也会改变呼吸的次数(频率)，但是，绝对不要以为单一个呼吸节奏，就可以完全代表跑步的呼吸调节。人体跑步时的呼吸调节会受到跑步速度的显著影响，尽管两人以相同的速度一起跑步，两人的最佳呼吸节奏(深度与次数)也会有所差异。
+
+2. 影响肺部气体交换量的因素
+人体肺部的气体交换受到呼吸频率(次数)、呼吸深度(潮气量)与死腔大小的影响，因此，到底跑步时要增加呼吸的频率或深度，做为运动时增加呼吸交换量的依据？这个问题的解释与死腔大小有关。 所谓死腔代表人体口、鼻、咽喉、气管与支气管等气体通路(约150ml)，当吸入的空气通过这些空间时，会保留下死腔大小的空气量，不会进入肺部进行气体交换，因此，尽管安静休息时的每次呼吸量约500ml，但是真正进入肺部进行气体交换的空气量只有 350ml，如果以每分钟10次的呼吸次数计算，人体安静休息时的真正肺部气体交换只有3500ml。增加呼吸的深度(每次吸入的空气量)，可以显著降低死腔的影响，达成增加肺部气体交换量的目的。特别是随着跑步速度的增快，死腔也会显著增加，如果只以呼吸频率的改变来调节，那么肺部的气体交换效率就不会提升，不利跑步时的氧气增加需求。
+
+3. 以口或鼻呼吸
+如何增加呼吸的深度？是进行跑步呼吸调节的重点。基本上来说，当跑步的速度不是很快，人体的氧气需求量还不高时，以鼻吸气、口吐气的方式，可以获得比较自然的换气调节。此时跑者应尽可能增加鼻子的吸气深度、降低呼吸的频率，以便获得较佳的肺部气体交换效率。当跑步的速度加快后，吸气的深度可以再增加，呼吸的频率也会慢慢提升，若以鼻子吸气的节奏无法达成肺部气体交换的需求 (感觉必须以口帮忙吸气) 时，表示跑步的速度已经太快，此时放慢跑步的速度，显然比调节呼吸深度或频率还来的重要。
+
+4. 胸式或腹式呼吸
+以肋骨与胸骨上提扩张胸腔，达成气体进入肺部的呼吸方式，称为胸式呼吸。肋骨与胸骨不动，以横隔膜下缩造成胸腔扩张 (腹部突起)，达成气体进入肺部的呼吸方式，称为腹式呼吸。事实上，腹式呼吸就是所谓气入丹田 (下腹部) 的呼吸调节方式，也是达成增加呼吸深度的有效手段。跑步时采用腹式呼吸的方式来调节，可以显著提升肺部的气体交换效率。
+跑步时人们可能都有过这样的经历，如果调整不好呼吸跑不了几步就会气喘吁吁，再咬牙跑几步，就有点呼吸不过来。虽然跑步是不少人喜爱的健身方式，但是以上描述的种种不适却常让人打退堂鼓。其实，跑步并不难，只要掌握了正确的呼吸方法，疲劳感自然就少了。那么，跑步时要怎样调整呼吸？
+
+### 跑步姿势
+
+向前是跑步最重要的一个环节。保证向前的动力能防止疲劳后动作的变形，建议进行力量和拉伸练习。跑步者的伸拉练习应该是“动力伸拉”，而不是普通的静力伸拉，因为跑步本身是动力性质的。
+
+### 身体各部位协调
+
+1. 头和肩
+跑步动作要领——保持头与肩的稳定。头要正对前方，除非道路不平，不要前探，两眼注视前方。肩部适当放松，避免含胸。
+动力伸拉——耸肩。肩放松下垂，然后尽可能上耸，停留一下，还原后重复。
+
+2. 臂与手
+跑步动作要领——摆臂应是以肩为轴的前后动作，左右动作幅度不超过身体正中线。手指、腕与臂应是放松的，肘关节角度约为90度。
+动力伸拉——抬肘摆臂。两臂一前一后成预备起跑姿势，后摆臂肘关节尽量抬高，然后放松前摆。随着动作加快时越抬越高。
+
+3. 躯干与髋
+跑步动作要领——从颈倒腹保持直立，而非前倾（除非加速或上坡）或后仰，这样有利于呼吸、保持平衡和步幅。躯干不要左右摇晃或上下起伏太大。腿前摆时积极送髋，跑步时要注意髋部的转动和放松。
+动力伸拉——弓步压腿。两腿前后开立，与肩同宽，身体中心缓慢下压至肌肉紧张，然后放松还原。躯干始终保持直立。
+
+4. 腰
+跑步动作要领——腰部保持自然直立，不宜过于挺直。肌肉稍微紧张，维持躯干姿势，同时注意缓冲脚着地的冲击。
+动力伸拉——体前屈伸。自然站立，两脚开立，与肩同宽。躯干缓慢前屈至两手下垂至脚尖，保持一会儿，然后复原。
+
+5. 大腿与膝
+跑步动作要领——大腿和膝用力前摆，而不是上抬。腿的任何侧向动作都是多余的，而且容易引起膝关节受伤，因此大腿的前摆要正。
+动力拉伸——前弓身，两脚站距同髋宽．双手放在头后．从髋关节屈体向前．保持腰背挺直，直到股二头肌感到紧张。
+
+6. 小腿与跟腱
+跑步动作要领——脚应落在身体前约一尺的位置，靠近正中线。小腿不宜跨得太远，避免跟腱因受力过大而劳损。同时要注意小腿肌肉和跟腱在着地时的缓冲，落地时小腿应积极向后扒地，使身体积极向前。另外，小腿前摆方向要正，脚应该尽量朝前，不要外翻或后翻，否则膝关节和踝关节容易受伤。可在沙滩上跑步时检查脚印以作参考。
+动力伸拉——撑壁提踵。面向墙壁约1米左右站立，两臂前伸与肩同宽，手撑壁。提踵，再放下，感觉小腿和跟腱紧张。
+
+7. 脚跟与脚趾
+跑步动作要领——如果步幅过大，小腿前伸过远，会以脚跟着地，产生制动刹车反作用力，对骨和关节损伤很大。正确的落地时用脚的中部着地，并让冲击力迅速分散到全脚掌。
+动力伸拉——坐式伸踝．跪在地上，臀部靠近脚跟，上体保持直立．慢慢向下给踝关节压力直到趾伸肌与脚前掌感到足够拉力．然后抬臀后重复．动作要有节奏，缓慢。
+
+### 跑步过程中
+
+上体的姿势：正确的上体姿势是正直或稍前倾，头部自然，眼平视，面部和颈部的肌肉要放松。
+
+腿部动作：跑的速度大小决定于步长和步频。
+
+后蹬与前摆：在一个跑的周期中，当身体重心移过支撑点后，开始后蹬与前摆的动作。当摆动腿通过身体垂直部位向前摆动时，支撑腿的各个关节要迅速蹬伸，首先伸展髋关节，再迅速有力地伸展膝关节和踝关节。后蹬结束时，腿几乎伸直或伸直。蹬伸的时间应短促，这样才能在蹬伸后及时向前摆腿。
+
+腾空：后蹬腿蹬离地面后，身体进入腾空时期。当后蹬腿的大腿开始向前摆动时，小腿顺惯性自然摆起，膝关节弯曲，形成大小腿折叠的姿势。
+
+脚的着地与缓冲：当摆动腿的大腿开始下落时，膝关节亦随之自然伸直，并用后脚掌着地。
+
+摆臂动作：中长跑时，两臂稍微离开躯干，肘关节自然弯曲，以肩为轴前后自然摆动，摆幅要适当。
+途中跑有一半以上的距离是在弯道上跑的。弯道跑的技术与短跑基本相同，只是动作的幅度与用力程度较小。
+
+## 跑马拉松的注意事项
+
+对于业余马拉松爱好者来说，参加比赛前还需做足准备工夫，以免身体在长时间的剧烈运动中出现问题。
+
+### 赛前训练
+
+尽管马拉松训练在于平时量的积累，但赛前的积极调整、提升状态还是很重要的。比赛三天以前应该坚持每天训练40分钟左右，跑8—10公里。不过，运动前后的热身和恢复不能偷懒，分别在30分钟为宜。临近比赛前两天就不能再跑了，但保持热身，以微微出汗、身体感觉轻便、愉悦为准。比赛前一天可以做一个全身的保健按摩，或者游泳半小时，注意不要感冒了。
+
+### 赛前准备
+
+1. 赛前一周调整作息时间，22点前一定要休息。
+
+2. 赛前头天多喝水非常重要，建议3升以上。排尿和清水颜色一样才达标。
+
+3. 饮食要多吃水果蔬菜，推荐每天西红柿炖牛腩，每天2个苹果、2支香蕉，都是促进消化、促进排泄，又补充维C的好东西。
+
+4. 比赛当天的早餐可以吃面包、蛋糕、粥，以6分饱为宜。
+
+### 建议
+
+赛间喝水在5、10公里处，不要等到20公里后口渴脱水了再补，人体水分吸收需要45分钟，等口渴再补水就晚了。比赛开始后前面不要跑得太快，以免后来体力透支。建议全程匀速跑、结伴跑。
+
+### 长跑注意事项
+
+#### 一、跑前做简单热身操
+
+有些人不习惯做热身运动，而跑步前应做一下脚部的热身和缓和运动。由于跑步对膝关节压力较大，因此要加强膝关节的热身。
+
+#### 二、长跑最好四步一呼吸
+
+长跑属于有氧代谢运动，参与人体各大器官的循环，特别是呼吸系统。在跑步过程中，人体对氧气的需求量不断增加，一般情况下，以四步一呼吸为宜，并尽量始终保持这一节奏。在呼吸方式上，以鼻呼、口鼻混合吸较好。
+长跑刚开始时，由于氧气供应落后于肌肉的活动需要，因此会出现腿沉、胸闷、气喘等现象，特别是经常不锻炼的人感觉会更强，但这是正常的。如果感觉比较难受，应停下来，步行几百米，如感到特别不适，就要停止长跑。
+
+#### 三、跑后仍要漫步几百米
+
+长跑后有的人立刻坐下来休息。周教练提醒，跑完千万不要马上停下休息。跑步后，人体全身上下都得到活动，应使身体各部位慢慢放松下来，建议跑完后漫步几百米，全身彻底放松后，再做一些力所能及的腰、腹、腿、臂的活动。
+
+#### 四、四类人不宜参加长跑
+
+由于曾出现过马拉松赛参赛者猝死现象，因此以下人员不适宜参加长跑。
+
+一、有潜藏疾病者。此类疾病主要是心脑血管疾病。
+
+二、平时无体育锻炼者。如果运动量大大超出平时负荷，产生运动过度紧张，会造成猝死或者其他运动伤害；
+
+三、轻度活动就有胸闷、头痛、头晕等不适症状者；
+
+四、老年高血压和糖尿病患。
+
+#### 五、热身步骤
+
+    * 两手叉腰，足尖点地交替活动双侧踝关节
+
+    * 屈膝半蹲，足跟提起，反复练习3至5次，活动双侧膝关节
+
+    * 交替抬高和外展双下肢，以活动髋关节
+
+    * 前后、左右弓箭步压腿、牵拉腿部肌肉和韧带
+
+### 长跑护脚是要点
+
+参加长跑锻炼，穿的鞋不合适，跑的姿势不科学，练习场地选择不当，练习后不注意脚的保健等，都将会引起脚痛。长跑锻炼如何保护好脚，是体育教师辅导学生锻炼时十分重要的问题。在实际教学中应注意以下几点。
+
+一、要尽量选择松软的场地，不要在很坚硬的水泥地面上跑步。上坡跑时，利用前脚掌着地，上体稍前倾，步幅稍小些，加强后蹬；下坡时，上体稍后仰，脚跟先着地，然后过渡到全掌，并要随时注意安全，不要随惯性猛跑，以免发生危险。
+
+二、不要穿硬底鞋，尽量穿底子较软较厚的鞋，最好穿胶鞋。如要在柏油马路上跑，就必须选择一双垫有厚海绵垫的胶鞋作为"跑鞋"。因为人在跑动中，每行动一次，脚底都要承受一次地面反作用力对它的冲击，这种冲击力是由鞋底来传递的。由于海绵是泡沫橡胶，缓冲性很大，当它受到地面反作用力的冲击时，就会很快发生变形，凹陷下去。这种变形消耗了大部分冲击力，传递给跑步者脚底的冲击力就大大减小了。海绵的缓冲作用，还能使剩余的冲击力均匀地分布在脚底上，而不是集中冲击某一点。一旦冲击力消除，富有弹性的海绵即刻恢复原状而凸起。所以穿上厚海绵垫的胶鞋跑步后，就不大容易发疼。如果穿硬底鞋长期在硬路面（柏油马路）上跑步，则是"硬碰硬"，跑后脚会感到疼痛。
+
+三、跑步的姿势要科学合理。脚着地时应避免脚跟先着地。应该用前脚掌着地，充分发挥脚弓的弹性，以利于作好缓冲动作，减小着地时的阻力。腿的后蹬要舒展，脚落地时要利用好缓冲力量，不要太猛。这样跑起来使人感到两脚轻巧而富有弹性，还可以减轻脚的负担，避免伤痛。
+
+四、跑步时，鞋带不宜系得太紧，否则会有碍脚部的血液循环。经常用热水泡脚，能减低下肢脚部肌肉的粘滞性，增强关节韧带的弹性和伸展度，也可防止发生伤痛。养成勤洗脚的卫生习惯也能对脚进行保健作用。
