--- a/知识笔记.md
+++ b/知识笔记.md
@@ -265,37 +265,37 @@
 
 纵使你再苦口婆心，再循循善诱，他们只能听进去他们本来就想听到的，然后再把别人栽过的跟头再栽一遍，最后受伤了又后悔当初要是听进去别人说的话该多好......
 
-## 其它
+# 其它
 
-### 及时养成复盘的习惯何谓复盘？
+## 及时养成复盘的习惯何谓复盘？
 
 复盘是对以前做过的事情如以前做过的项目（如主持的会议、考试的过程）进行一次回顾和总结,从中发现问题，这就像刻意练习里说的那样，只有对反馈进行总结并且调整优化，我们才有可能进步，否则你说你练习了几十年，但你其实只是把1天的经验机械地重复了几十年而已。
 
-### 唯有行动才能解决焦
+## 唯有行动才能解决焦
 
 虑很多事情在我们没有开始做之前，总是会有很多错误的判断，会有很多疑惑，会很焦虑，不知道自己能不能做好。其实，我们在明白了一定的原理之后就可以开始去做了，因为往往只有我们行动了才能有更深的体会，行动了大部分焦虑就自然解决了，在行动中学习，学习中行动，即互联网思维中的：小步试错，快速迭代。
 
-### 精力、注意力管理
+## 精力、注意力管理
 
 对人来说最重要的财富不是时间，而是我们的注意力:注意力>时间>金钱 这才是三者的价值排序，而很多人忽略了注意力对于我们每个人的价值。注意力即为能有价值产出的时间。珍惜自己的注意力和精力，把它用在最有价值的地方，去学习，工作，成长。而不是玩抖音手机里千万不要下抖音、快手这些时间黑洞应用里。长期来看这些玩这些东西基本没用，当然要你完全戒除肯定很难，不过可以慢慢减少花在这上面的时间。
 
-### 独立思考
+## 独立思考
 
 我们中国几乎不教我们如何独立思考，培养批判性思维，教授、专家说的话就一定是对的吗？那些网络谣言如此荒谬，为何还有一堆人上当受骗？而独立思考的能力注定是一个人能有所成就的必备的能力，一个人如果不会独立思考，很大程度上被谣言所蒙骗，被传销所迷惑。甚至可能仅仅因为某些砖家推荐了几个“涨停板”，就全仓杀入股市，到头来连“底裤”都输光。。
 
-### 给自己和家人买保险
+## 给自己和家人买保险
 
 当你工作之后会发现，周围的人除了基本的医保还会买其他的保险，经济困难的话可以单纯买健康险，能保个平安，给家人和自己一个保障，一个普通的家庭是没有办法承担那些重大疾病的打击的，生病之后很容易压垮一个人，毁灭一个家庭
 
-### 少做低收益的事
+## 少做低收益的事
 
 比如王者荣耀、抖音等等，多做高收益的事情比如看书、学一门乐器、健身。因为王者荣耀那些东西长远来看对你的人生基本没有帮助。抖音不可怕，可怕的是你因为长时间坐高刺激的事情提高了自己的阈值，再也不能沉下心思考了。
 
-### 持续优化自我
+## 持续优化自我
 
 工作中，不做伸手党，遇到问题自己先想办法，要锻炼自己思考的能力。问别人只是为了优化自己的答案。领导交代的工作，做之前先问清楚和领导确认一遍，这样做事有清晰的目标，有反馈。这样才能做得更好。
 
-### 正确对待金钱
+## 正确对待金钱
 
 钱重要吗？的确很重要，可它是不是世界上最重要的东西呢？其实不是并不是越富有就越幸福人们会适应财富的增加，收入水平存在一个临界点，过了这个点，幸福感的增强速度远慢于收入的增长速度。（虽然平均来讲，收入的增加总是伴随着幸福感的增加）
 
@@ -303,46 +303,46 @@
 
 所以我们应该在“视金钱如粪土”和”金钱至上”之间保持一个微妙的平衡，这个平衡点对不同的人，具体的位置也不同。
 
-### 不要像机器人一样，做繁琐和精确到分钟的计划表
+## 不要像机器人一样，做繁琐和精确到分钟的计划表
 
 比如网上盛传的浙大学霸那个学习计划表（甚至精确到秒）这种看起来很好的习惯，但本质上，它是存在很大误区的，生活中的突发事件有很多，我们不能完全按照计划表上的事情做好，偶然的突发事情让计划脱离了轨道，就会很受挫，得不偿失！
 
-### 越早学会理财越好（更准确地说是学会理财的思维）
+## 越早学会理财越好（更准确地说是学会理财的思维）
 
 很多人说：我工资才5000，用不了几下就月光了，怎么理财啊，等我有钱再理吧！现实情况是“你不理财，财不理你”即使有一天你走大运，中了500万大奖，相信我不出两年，你迟早给它败光。这里的理财思维指的是一种金钱的分配方式，比如X%存XX宝，Y%当做救济金，Z%买基金，以及一些节流的思维。和财富的绝对值没有那么相关。
 
-### 不背后说人坏话
+## 不背后说人坏话
 
 因为在微信群等等里背后讨论别人，难免会被其他人截图传到当事人那里，从而造成关系的决裂，很可能别人一辈子都不会信任你，不会跟你有深入的合作，因为你背地里都这样，谁知道你究竟是个什么样的人？**所以我们不要在背后说人坏话，哪怕是线下，不会被截图**，这不仅是为了提高修养，更是为了保护自己的安全。
 
-### 快速从过程导向转变为结果导向的思维
+## 快速从过程导向转变为结果导向的思维
 
 什么是结果导向呢？结果导向指的是做一件事情，以结果为最终目标，以如何完成目标为导向的思考方式，与之相对的就是过程导向：只关心做事情的过程，不在乎结果。结果导向只关心事情的结果，不在乎你用什么方法完成的事情（只要没有违反道德、法律）。
 
 日本经营四圣之一的稻盛和夫在自传中提过这样一件事：在京瓷刚创立的时候，为了抢到订单，无论客户有什么技术上的要求，他都答应，其中有很多“看似不可能完成的任务”，但是他都一一解决了。**只有当你以结果为导向，对结果负责，而不是沉浸在“我已经很努力了的过程里面”你才不会遇到困难找借口，总想着逃避。**
 
-### 升米恩，斗米仇
+## 升米恩，斗米仇
 
 **不要成为一个没有原则的滥好人**，否则你帮助过的人不会感谢你，你没帮助到的人会怨恨你。我想起了有一个笑话，某个乞丐在街上祈祷，A路过后天天给了他10块钱，B看乞丐好欺负，天天打他一顿。某天A突然忘带零钱了，乞丐问他说你今天怎么不给我钱! 某天B忘记打了乞丐，乞丐却感激涕零觉得B内心其实是一个好人。虽然是个笑话，不过对我们理解道理有所帮助。
 
-### 不要看对方说了什么，而是思考他说这个的真实需求（其实就是追问黄金圈里的那个why是什么）
+## 不要看对方说了什么，而是思考他说这个的真实需求（其实就是追问黄金圈里的那个why是什么）
 
 比如说你爸妈突然给你打了个电话，给你说你们那里的天气怎么样怎么样,叫你注意保暖等等。表面上看是她想和你聊天气，但其实是你好久没回家，他们想你了，这时候你不应该回答：我知道了，我会注意保暖的。而应该说我XX时候就回来了。因为时代、观念的原因，他们只好这样表达他们的想法。
 
-### 年轻没多少钱的时候
+## 年轻没多少钱的时候
 
 **尽量把大多数可调用的钱砸在提升自己上**，这是回报最高的投资方式了。
 你说你去投资一年20%的净收益率算高了吧？50W的本金能挣10W，可是刚毕业的大学生有几个人有50W以上呢？只有2W块钱的时候与其把精力全花在炒股上，不如先拿来提升自己，等你有了10W以上再想着投资也不迟。
 
-### 实践最重要
+## 实践最重要
 
 **很多人都说：为什么我看了这么多书，懂得了这么多道理，可为何还是过不好这一生？那我想问你按书中的实践了吗？你有刻意地按照某些书里的道理控制自己的行为吗？这就好比一个人听了很多游泳的理论却从未下过一次水，却说：老天啊，我为什么不能成为一个游泳高手呢？**你觉得这些道理都有点用而不行动，等于在死循环里继续挣扎。
 
-### 决策的时候记得考虑机会成本和沉没成本
+## 决策的时候记得考虑机会成本和沉没成本
 
 举个例子上班的时候很多人为了省钱，选择租离公司很远的房子，**通勤就要2个小时但是租金却比较低，以为自己赚到了。但是你还忽略了时间这个成本啊，**你租一个离公司通勤只需半个小时的房子，虽然租金贵但大大地减少你时间、精力的浪费也许更划算呢？
 
-### 人生比我们想得还短暂，只有900个方格
+## 人生比我们想得还短暂，只有900个方格
 
 **每隔一个月，我就亲手把一块方格涂黑。**
 以前我总以为时间还很长，自己还很年轻，直到有一天我了解了这个东西。
@@ -359,13 +359,13 @@
 
 其实死亡一天天地都在接近我们，只是我们在大学的时候忙于打游戏、K歌，上班的时候忙于加班，中年的时候忙于带孩子。可是什么时候有时间做自己真正想做的事情呢？做那些让你激动不已的事情？当你60岁格子快涂满的时候，你会不会后悔要是自己在20岁时多努力一点，在25岁的时候多去看一看这个世界？**所以说趁年轻多去做一做你梦想的事情吧，因为每一天，每一个月你都在划去这900个方格里的一格啊！**
 
-### 为你自己打工，对自己的成长负责
+## 为你自己打工，对自己的成长负责
 
 很多人这样想：我们付出自己的工作时间，老板付我们报酬，那么老板付我多少钱，我就干多少钱的活，拿6000块我就干6000块的活，要是我在工作之余打打游戏，只干了5000块的活我就赚了！然而这样想完全是错误的，给老板打工，我们会总觉得老板在剥削自己，自己是那个“受害者”。不可否认，总会有不太公平的老板，不会按照你做的贡献、你的工作水平给你相应的薪资。**可是你始终是为自己打工**啊，你工作里面获得的成长，积累的项目经验，做出的业绩等等完全是自己的，别人都抢不走。
 
 如果你因为公司环境不好，老板不公平的环境而放弃好好工作，那就太傻了。环境不好，那我好好干积累项目经验跳槽就是。假如因为老板不公平，你作为一个程序员，选择每天上班就是网上随便找个代码复制再随便修改了事，你又得到了什么呢？除了那基本薪水外你什么都没有得到，技术没有得到提升，还浪费了最宝贵的光阴，如果再过两年还这样，估计要被老板开除了…… **记住你永远都在为一家叫做“自己”的无限责任公司打工。**
 
-### 给别人鼓励或者给别人点赞
+## 给别人鼓励或者给别人点赞
 
 会让你的运气变好，这是有心理学效应的（这叫皮格马利翁效应）
 
@@ -506,7 +506,7 @@
 
 吃不穷喝不穷，算计不到才穷。
 
-## 有哪些值得长期坚持下去的好习惯？
+# 有哪些值得长期坚持下去的好习惯？
 
 1. 心情糟糕时认真清理房间，心情莫名就开始清爽起来；
 2. 受人恩惠帮助后除了说声谢谢，再赠送一件小礼品，可以结识到更亲密的关系；
@@ -533,7 +533,7 @@
 
 坚持下来，会看到不一样的自己，那更美。 我们都一起，每日每月以求寸进，加油！
 
-## 二八定律
+# 二八定律
 
 二八定律，你的80%的成就来自于你的20%的行为。
 二八定律如何应用到生活中去？
@@ -543,18 +543,18 @@
 这5件事中，哪一件最有可能帮你达成这个目标？
 那么，在这件事情上，你应该投入最大的精立和注意力。
 
-## 笔记
+# 笔记
 
 ![notebook](zhishi.assets/notebook.jpg)
 
-## 创业机会
+# 创业机会
 
 1. 社交电商
 2. 自媒体
 3. 知识付费
 4. 情感咨询
 
-## 5W1H
+# 5W1H
 
 5W+1H：是对选定的项目、工序或操作，都要从原因（何因Why）、对象（何事What）、地点（何地Where）、时间（何时When）、人员（何人Who）、方法（何法How）等六个方面提出问题进行思考。
 
@@ -571,19 +571,19 @@
 6. **方式 （How）**——如何
    手段也就是工艺方法，例如，我们是怎样干的？为什么用这种方法来干？有没有别的方法可以干？到底应该怎么干？有时候方法一改，全局就会改变。
 
-## 天道酬勤、厚德载物
+# 天道酬勤、厚德载物
 
 1. 天道酬勤：意思是上天会按照每个人付出的勤奋，给予相应的酬劳。多一分耕耘，多一分收获，只要你付出了足够的努力，将来也一定会得到相应的收获。出自《周易》中的卦辞：“**天行健，君子以自强不息；地势坤，君子以厚德载物**”。
 2. 厚德载物：意思是指君子的品德应如大地般厚实可以承载万物。厚德载物，作为中华民族的精神和优良传统是十分重要的。一个有道德的人，应当像大地那样宽广厚实，像大地那样承载万物和生长万物。语出《周易》：“地势坤，君子以厚德载物。”
 
-## 为什么要努力读书
+# 为什么要努力读书
 
 1. 努力读书，不一定能挣很多钱，却可以看见更大的世界。
 2. 努力读书，不一定能大富大贵，却能有更多的选择机会。
 3. 努力读书，不一定会让你的智商更高，却能让你从容应对生活。
 4. 努力读书，不一定能让您成为完美的人，却能帮您不断完善自我。
 
-## 营销
+# 营销
 
 1. 客户说考虑一下？
 
@@ -599,7 +599,7 @@
 
 当客户把问题说出来后，我们就可以针对问题去解决问题。
 
-### 私域
+## 私域
 
 定位定天下，定价定江山。
 
@@ -614,9 +614,9 @@
 4. IP力
 5. 产品力
 
-## 电商
+# 电商
 
-### 选品思路总结
+## 选品思路总结
 
 1. 通过找无货源同行卖的好的好产品来选品
 2. 通过生意参谋找蓝海词，再找蓝海品来选品
@@ -633,13 +633,13 @@
 13. 思路之，用别人已经在市场经过验证接受的产品来选品
 14. 跨界蓝海，在一个平台上火的产品，别的平台还没有，移植过来就行了。
 
-### 拼多多快速盈利法
+## 拼多多快速盈利法
 
 1. 领券中心玩法高额券。10-25 之间的券，不需要开车。一两个星期后，一般就会有1500左右的免费访客。一天出个几十单，做10个链接，可以一天出几百单，大概一天1000多的利润，并且后续还会增长。这个玩法的特点是，拼多多领券中心高额券权重高的规则逻辑，可以完全不开车拿到免费流量。单量不大，对于怕亏损的玩家可以先从这个开始玩。一般一两周就可以进入盈利期。
 2. 9.9五折抢2000件玩法。首先确定品评分OK，然后就是报2000份的活动，活动结束恢复目标价。一般只留5元，2元领券中心，2元留给直通车，1元作为利润。然后推广跟上，其他不动。活动结束直接有9.9活动资源位，权重很高，没有历史最低价记录。后续平台各种活动可以接着玩，基本上一个月左右这个品就可以进入盈利期。
 3. 限量折扣工具玩法。建议细分市场的小品类，直接通过后台的限量折扣工具，不用求小二。第一次5折300件，第二次6折500件，第三次就7折卖500件，后面慢慢涨，基本上到了8折的时候就会进入盈利期了。这个期间直通车一直开车。如果是细分市场的品，基本上3到7天就会打爆，进入销量排行榜。其他资源位蜂拥而来。前提也是品要靠谱，评分要能稳住。这个不求小二，自己做5折抢，亏损可控，打爆速度很快。一般一个月左右进入盈利期。
 
-### 客户哪些需求没有被更好地满足?
+## 客户哪些需求没有被更好地满足?
 
 只要天天想这个问题，就能够持续发现市场中存在的机会。
 
@@ -647,7 +647,7 @@
 
 但是对客户需求的思考和理解，才是你能够超越你同行的地方。
 
-### 影响标品转化率的因素
+## 影响标品转化率的因素
 
 1. **价格因素**同类产品而言，在其他因素相同的情况下,你比竞争对手价格低一点，转化率明显会超过对手。
 2. **销量因素**标品受到价格排名的影响因素更大，因此马太效应会更加明显，也就是说卖得好的会非常好，卖的差的会非常差。
@@ -662,48 +662,48 @@
 
 未来我们更应该向品质化、专业化、品牌化方向发展。因为只有品牌化，才有溢价空间,前期可以靠着低价和排名去抢占市场，但价格战始终不是长久之计，杀敌一千，自损八百，没有钱赚的生意是不能长久维持的，品质化才能长久，而且如果不能保证品质，也会增加非常多的维护成本，难以在竞争中保持下去。
 
-## 金融
+# 金融
 
-### 72这个数字很神奇
+## 72这个数字很神奇
 
 用72除以收益点数，等于资产翻倍所用的时间。比如余额宝的收益率为3%，那存一万到余额宝，变成两万，需要72÷3=24年。如果房价每年涨6%，一百万的房子变成200万，需要72÷6=12年。（这个72公式只适用于大致估算，如果收益率太高，超过20%，就会不太准确了。但世界上其实没太多收益很高的投资）
 
-### 信用卡分期年利率大约要乘以2才是真实利率
+## 信用卡分期年利率大约要乘以2才是真实利率
 
 比如，刷了1万元，办理分期，分期月费率0.75%，月还本金833.33，手续费75元。那真实年利率其实是：0.75%×12×12÷6.5=16.6%
 
-### 市值不等于现金
+## 市值不等于现金
 
 比如一栋大楼，有一百套房子。如果A来花一百万成交了一套房，这个大楼的市值就变成1亿，如果B来花200万成交了一套房，这个大楼的市值就变成2亿，如果C来花1000万成交了一套房，这个大楼的市值就变成10亿。但这个大楼里面的房东都有1000万了吗？没有。如果没人来买了，房东们都要降价才能卖出去，如果50万都能成交了，所有房东的市值立马损失950万。股票同理。
 
-### 外汇储备
+## 外汇储备
 
 一加手机在美国卖了1亿美元，把这1亿美元打回国内的工商银行，工行先上交给央行，央行再印7亿人民币给一加的工行账户，这1亿美元就是中国的外汇储备。
 
-### 通货膨胀
+## 通货膨胀
 
 外汇储备如果增多，对应国内流通的人民币也会增多，除此之外，央行也会主动印钱刺激经济，这种情况下，如果物资生产不增长，那物价就会上涨。这就是通货膨胀。
 
-### 美国国债
+## 美国国债
 
 外汇储备是美元，放在那里是一笔死钱，央行为了让它增值，就拿一部分买了美国的国债，为的是赚利息。并不是美国强迫我们买的。
 
-### 通货紧缩
+## 通货紧缩
 
 如果生产的货物供给太多，远大于需求，不断降价都就卖不出去。这种情况下，货物就不值钱了，而钱则更值钱了。如果各行各业都是这样，全国就会通货紧缩。
 
-### 零和游戏
+## 零和游戏
 
 不创造价值的金融活动的本质都是零和游戏。比如赌博、期货和传销资金盘，一个人赚，就必定对应有一个人或者多个人亏；一个人亏，就必然对应有一个人或者几个人赚。再比如一些毫无内生价值的股票和数字货币，都是零和游戏。零和游戏万万别参与，注定亏钱。
 
-### 贷款买房不是投资，而是负债
+## 贷款买房不是投资，而是负债
 
 很多人一提到买房，就说房子是有价值的投资，可以抵抗通货膨胀，未来增值可以赚钱。但是，房子的本质是负债，不是投资。人们之所以会产生房子是投资的错觉，是因为过去几十年房价一直在稳定上涨的。但是未来不一定还会是这种情况。另外，许多很偏远的地方，房价十年都不会涨，甚至因为太偏远而卖不出去，那相当于跌到零了。许多一线城市，比如北京、杭州，都曾经经历过大跌，只是现在很多人已经忘记了而已。正确地定义房子，我认为应该叫奢侈品。
 
-### 金融危机
+## 金融危机
 
 可分为四种。货币危机（汇率不可承受地大幅变动）、债务危机（国际借贷领域，还不起债）、银行危机（银行资不抵债）、次贷危机（给穷人房贷太多，还不起）。通常这四种危机可能同时出现。总之，都是金融资产的大幅下跌，导致资不抵债引发了危机。
 
-### 经济危机
+## 经济危机
 
 经济危机指的是生产能力过剩，严重超过了需求。比如一个国家只有10亿人，却生产了20亿空调、电视、汽车，完全消费不完。这种情况下，企业贷款会出问题，现金流也会出问题，还会导致大面积的失业，社会动荡。
