--- a/网站资源库.md
+++ b/网站资源库.md
@@ -194,7 +194,7 @@ UISDC - 国内专业设计师平台 - 看设计文章，学软件教程，找灵
 
 [https://Fontsquirrel.com](https://Fontsquirrel.com)
 
-![Fontsquirrel](website.assets/Fontsquirrel.png)
+![Fontsquirrel](website.assets/fontsquirrel.png)
 
 ## 图标下载
 
